fix buttons hover state on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,7 +143,7 @@ p.note {
     color: var(--color-grey);
 }
 
-.ctaBtn:hover {
+.ctaBtn:hover:not(:focus), .ctaBtn:active {
     background-color: var(--color-orange);
 }
 
